modal-preview: fix image issue, overflow issue

--- a/src/assets/sass/modules/Sidenav/_sidenav.scss
+++ b/src/assets/sass/modules/Sidenav/_sidenav.scss
@@ -43,5 +43,4 @@
   height: 50px;
   border-radius: 50%;
   overflow: hidden;
-  object-fit: cover;
 }
